exports[`test component DOM matches snapshot - custom rendering 1`] = `
<div
  className="flex-container">
  <div
    className="menuitem-label">
    <div>
      custom
    </div>
  </div>
</div>
`;

exports[`test component DOM matches snapshot - label and icon 1`] = `
<div
  className="flex-container">
  <div
    className="menuitem-icon">
    <img
      alt="#"
      height="16"
      src="icon"
      width="16" />
  </div>
  <div
    className="menuitem-label">
    label
  </div>
</div>
`;
